[MacViewsBrowser] Long bookmark names should show an ellipsis

Bug: 712278
Change-Id: I20d490373e46fc09a3763b23bfcb86358e0d8c92
Reviewed-on: https://chromium-review.googlesource.com/988592
Reviewed-by: Erik Chen <erikchen@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547459}
Former-commit-id: 766cbabcd2a7a8d8abd29683d99cd655748f3881